@@ -1,3 +1,8 @@
+	20100324 (Till Straumann):
+
+	* BLDApp/src/BLDMCast.c: use c99 designated initializers to ensure
+	that array entries match associated enums.
+
 	20100323 (Till Straumann):
 
 	* BLDApp/src/BLDMCast.c: removed inclusion of unnecessary headers.
